# utils-c

./: .gitignore  README.md  meson.build
array/: array.c  array.h
list/: list.c  list.h
logs/: logs.c  logs.h
optional/: optional.c  optional.h
pointer/: pointer.c  pointer.h
result/: result.c  result.h
tests/: test_array.c  test_line.c  test_list.c  test_pointer.c  test_result.c
